--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.cwbase</groupId>
+            <artifactId>logback-redis-appender</artifactId>
+            <version>1.1.5</version>
+        </dependency>
     </dependencies>
 
     <build>
